--- a/lawwa-web-revised/facial.html
+++ b/lawwa-web-revised/facial.html
@@ -41,8 +41,6 @@
     <header class="header-section">
       <div class="container-fluid">
         <div class="row">
-          <!-- <div class="row" style="background-image: url('img/lawwa-img/wavey2.png');"> -->
-          <!-- <div class="row" style="background-image: linear-gradient(60deg, rgba(217,55,104,1),  rgba(42,56,143,1));"> -->
             <div class="col-4">
               <div class="logo">
                 <a href="./index.html">
@@ -51,18 +49,13 @@
               </div>
             </div>
             <div class="col-8 col-lg-8">
-            <!-- <div class="logo">
-              <a href="./index.html">
-                <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px"height="50px"/>
-              </a>
-            </div> -->
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./services.html">Services</a></li>
+                <li class="active"><a href="./services.html">Services</a></li>
                 <li><a href="./membership.html">Membership Program</a></li>
                 <li><a href="./academy.html">PBT Academy</a></li>
-                <li class="active">
+                <li>
                   <a href="#">Portfolio</a>
                   <ul class="dropdown">
                     <li><a href="./profile.html">Profile</a></li>
@@ -83,68 +76,123 @@
     </header>
     <!-- Header End -->
 
-    <section class="contact-section spad">
+    <!-- Services Section Begin -->
+    <br>
+    <section class="services-section services-normal spad">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-6">
-                    <div class="contact-text">
-                        <h3>Get in touch</h3>
-                        <br>
-                        <div class="ct-item">
-                            <div class="ct-icon">
-                                <i class="fa fa-map-marker"></i>
-                            </div>
-                            <div class="ct-text">
-                                <h5>Address</h5>
-                                <p>address for seremban</p>
-                            </div>
-                        </div>
-                        <div class="ct-item">
-                            <div class="ct-icon" style="background-image: linear-gradient(60deg, rgba(217,55,104,1), rgba(42,56,143,1));">
-                                <i class="fa fa-mobile"></i>
-                            </div>
-                            <div class="ct-text">
-                                <h5>Phone</h5>
-                                <ul>
-                                    <li>number 1</li>
-                                    <li>number 2</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="ct-item">
-                            <div class="ct-icon">
-                                <i class="fa fa-envelope"></i>
-                            </div>
-                            <div class="ct-text">
-                                <h5>Email</h5>
-                                <p>Support @ gmail.com</p>
-                            </div>
-                        </div>
+                <div class="col-lg-12">
+                    <div class="section-title pricing-title">
+                        <h2>Facial Services</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
+                            incididunt ut labore et dolore.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
+                                incididunt ut labore et dolore.
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
+                                incididunt ut labore et dolore.
+                            </p>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6">
-                    <div class="contact-form">
-                        <!-- <h3>Work with Me!</h3> -->
-                        <!-- <br><br><br><br><br> -->
-                        <form action="#">
-                            <input type="text" placeholder="Name">
-                            <input type="text" placeholder="Email">
-                            <input type="text" placeholder="Website">
-                            <textarea placeholder="Message"></textarea>
-                            <button type="submit" class="site-btn" style="background-image: linear-gradient(60deg, rgba(217,55,104,1),  rgba(42,56,143,1));">Submit</button>
-                        </form>
+            </div>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
+                        <h3>Facial Type 1</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
+                        <h3>Facial Type 2</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/lawwa-img/facial-alt.jpg" alt="">
+                        <h3>Facial Type 3</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <!-- Services Section End -->
 
-    <div class="map">
-        <iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=2.7259,101.9378+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
-            height="635" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
-        </iframe>
-    </div>
-
+    <!-- Services Option Section Begin -->
+    <section class="services-option">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <div class="section-title pricing-title">
+                        <h2>Related Products</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
+                            incididunt ut labore et dolore.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="so-item">
+                        <div class="so-title">
+                            <div class="so-number">01</div>
+                            <h5>Product</h5>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div>
+                    <div class="so-item">
+                        <div class="so-title">
+                            <div class="so-number">02</div>
+                            <h5>Product</h5>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div>
+                    <div class="so-item">
+                        <div class="so-title">
+                            <div class="so-number">03</div>
+                            <h5>Product</h5>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div>
+                </div>
+                <!-- <div class="col-lg-6">
+                    <div class="so-item">
+                        <div class="so-title">
+                            <div class="so-number">04</div>
+                            <h5>Social media photography</h5>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div>
+                    <div class="so-item">
+                        <div class="so-title">
+                            <div class="so-number">02</div>
+                            <h5>Event Photography</h5>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div>
+                    <div class="so-item">
+                        <div class="so-title">
+                            <div class="so-number">03</div>
+                            <h5>personal photography</h5>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div>
+                </div> -->
+            </div>
+        </div>
+    </section>
+    <!-- Services Option Section End -->
 
     <!-- Footer Section Begin -->
     <footer class="footer-section">
