--- a/lawwa-web-revised/membership.html
+++ b/lawwa-web-revised/membership.html
@@ -51,18 +51,13 @@
               </div>
             </div>
             <div class="col-8 col-lg-8">
-            <!-- <div class="logo">
-              <a href="./index.html">
-                <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px"height="50px"/>
-              </a>
-            </div> -->
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./services.html">Services</a></li>
-                <li><a href="./membership.html">Membership Program</a></li>
+                <li class="active"><a href="./membership.html">Membership Program</a></li>
                 <li><a href="./academy.html">PBT Academy</a></li>
-                <li class="active">
+                <li>
                   <a href="#">Portfolio</a>
                   <ul class="dropdown">
                     <li><a href="./profile.html">Profile</a></li>
@@ -82,70 +77,102 @@
       </div>
     </header>
     <!-- Header End -->
-
-    <section class="contact-section spad">
+   
+    <!-- Cta Section Begin -->
+    <section class="cta-section spad set-bg" data-setbg="img/lawwa-img/DSC08056.jpg" style="display: block;
+    margin-left: auto;
+    margin-right: auto;
+    ">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-6">
-                    <div class="contact-text">
-                        <h3>Get in touch</h3>
-                        <br>
-                        <div class="ct-item">
-                            <div class="ct-icon">
-                                <i class="fa fa-map-marker"></i>
-                            </div>
-                            <div class="ct-text">
-                                <h5>Address</h5>
-                                <p>address for seremban</p>
-                            </div>
-                        </div>
-                        <div class="ct-item">
-                            <div class="ct-icon" style="background-image: linear-gradient(60deg, rgba(217,55,104,1), rgba(42,56,143,1));">
-                                <i class="fa fa-mobile"></i>
-                            </div>
-                            <div class="ct-text">
-                                <h5>Phone</h5>
-                                <ul>
-                                    <li>number 1</li>
-                                    <li>number 2</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="ct-item">
-                            <div class="ct-icon">
-                                <i class="fa fa-envelope"></i>
-                            </div>
-                            <div class="ct-text">
-                                <h5>Email</h5>
-                                <p>Support @ gmail.com</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-6 col-md-6">
-                    <div class="contact-form">
-                        <!-- <h3>Work with Me!</h3> -->
-                        <!-- <br><br><br><br><br> -->
-                        <form action="#">
-                            <input type="text" placeholder="Name">
-                            <input type="text" placeholder="Email">
-                            <input type="text" placeholder="Website">
-                            <textarea placeholder="Message"></textarea>
-                            <button type="submit" class="site-btn" style="background-image: linear-gradient(60deg, rgba(217,55,104,1),  rgba(42,56,143,1));">Submit</button>
-                        </form>
+                <div class="col-lg-12">
+                    <div class="cta-text">
+                        <h2>Ready To Join?</h2>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore<br /> magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+                            viverra maecenas.</p>
+                        <a href="#" class="cust-lawwa-gradient">Contact us</a>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <!-- Cta Section End -->
 
-    <div class="map">
-        <iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=2.7259,101.9378+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
-            height="635" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
-        </iframe>
-    </div>
+    <br><br>
+     <!-- Services Option Section Begin -->
+     <section class="services-option" >
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12">
+              <div class="section-title pricing-title" style="margin-bottom: 10px !important; padding-bottom: 20px !important;">
+                  <h3>Membership Benefits</h3>
+                  <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do<br /> eiusmod tempor
+                      incididunt ut labore et dolore.</span>
+              </div>
+          </div>
+        </div>
+
+        <div class="row">
+          <div class="col-lg-6">
+                  <div class="so-item">
+                      <div class="so-title">
+                          <div class="so-number">01</div>
+                          <h5>Access To Lawwa Services</h5>
+                      </div>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                  </div>
+                  <div class="so-item">
+                      <div class="so-title">
+                          <div class="so-number">02</div>
+                          <h5>Access To Lawwa Products</h5>
+                      </div>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                  </div>
+                  <div class="so-item">
+                      <div class="so-title">
+                          <div class="so-number">03</div>
+                          <h5>Membership Kit</h5>
+                      </div>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                  </div>
+              </div>
+              <div class="col-lg-6">
+                  <div class="so-item">
+                      <div class="so-title">
+                          <div class="so-number">04</div>
+                          <h5>Lawwa communtity</h5>
+                      </div>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                  </div>
+                  <div class="so-item">
+                      <div class="so-title">
+                          <div class="so-number">02</div>
+                          <h5>Malaysia wide service</h5>
+                      </div>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                  </div>
+                  <div class="so-item">
+                      <div class="so-title">
+                          <div class="so-number">03</div>
+                          <h5>Help Us Fight Covid</h5>
+                      </div>
+                      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                          magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                  </div>
+              </div>
+          </div>
+      </div>
+  </section>
+  <!-- Services Option Section End -->
 
 
+  
     <!-- Footer Section Begin -->
     <footer class="footer-section">
         <div class="container">
