--- a/lawwa-web-revised/productdemo.html
+++ b/lawwa-web-revised/productdemo.html
@@ -41,8 +41,6 @@
     <header class="header-section">
       <div class="container-fluid">
         <div class="row">
-          <!-- <div class="row" style="background-image: url('img/lawwa-img/wavey2.png');"> -->
-          <!-- <div class="row" style="background-image: linear-gradient(60deg, rgba(217,55,104,1),  rgba(42,56,143,1));"> -->
             <div class="col-4">
               <div class="logo">
                 <a href="./index.html">
@@ -51,18 +49,13 @@
               </div>
             </div>
             <div class="col-8 col-lg-8">
-            <!-- <div class="logo">
-              <a href="./index.html">
-                <img src="img/lawwa-img/lawwa asia logo.png" alt="" width="60px"height="50px"/>
-              </a>
-            </div> -->
             <nav class="nav-menu mobile-menu">
               <ul>
                 <li><a href="./index.html">Home</a></li>
-                <li><a href="./services.html">Services</a></li>
+                <li class="active"><a href="./services.html">Services</a></li>
                 <li><a href="./membership.html">Membership Program</a></li>
                 <li><a href="./academy.html">PBT Academy</a></li>
-                <li class="active">
+                <li>
                   <a href="#">Portfolio</a>
                   <ul class="dropdown">
                     <li><a href="./profile.html">Profile</a></li>
@@ -83,71 +76,101 @@
     </header>
     <!-- Header End -->
 
-    <section class="contact-section spad">
+    <!-- Portfolio Details Section Begin -->
+    <section class="portfolio-details-section spad">
+        <div class="pd-more-text">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12">
+                        <h2>Product Title</h2>
+                    </div>
+                    <div class="col-lg-4 col-4 col-sm-4">
+                        <!-- <div class="pdp-item set-bg" data-setbg="img/portfolio/details/details-pic/dp-1.jpg"></div>
+                        <div class="pdp-item set-bg large-width large-height"
+                            data-setbg="img/portfolio/details/details-pic/dp-2.jpg"></div> -->
+                        <div class="set-bg large-width" data-setbg="img/portfolio/details/details-pic/dp-3.jpg">
+                            <img src="img/lawwa-img/product1.jpg">
+                        </div>
+                        <!-- <div class="pdp-item set-bg" data-setbg="img/portfolio/details/details-pic/dp-4.jpg"></div>
+                        <div class="pdp-item set-bg" data-setbg="img/portfolio/details/details-pic/dp-5.jpg"></div>
+                        <div class="pdp-item set-bg" data-setbg="img/portfolio/details/details-pic/dp-6.jpg"></div> -->
+                    </div>
+                    <!-- <div class="col-lg-4">
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
+                            viverra maecenas accumsan lacus vel facilisis. Nemo enim ipsam voluptatem spernatur.</p>
+                    </div> -->
+                    <div class="col-lg-4">
+                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit. Vivamus at nibh
+                            tincidunt, bibendum ligula id. Nemo enim ipsam voluptatem quiatotam rem aperiam, eaque ipsa
+                            quae ab illo inventore veritatis et quasi architecto beatae vitae fugit.</p>
+                    </div>
+                    <div class="col-lg-4">
+                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit. Vivamus at nibh
+                            tincidunt, bibendum ligula id. Nemo enim ipsam voluptatem quiatotam rem aperiam, eaque ipsa
+                            quae ab illo inventore veritatis et quasi architecto beatae vitae dicta.</p>
+                    </div>
+                </div>
+
+                </div>
+            </div>
+    </section>
+    <!-- Portfolio Details Section End -->
+
+    <!-- Recent Photography Section Begin -->
+    <section class="recent-photography-section spad">
         <div class="container">
             <div class="row">
-                <div class="col-lg-6 col-md-6">
-                    <div class="contact-text">
-                        <h3>Get in touch</h3>
-                        <br>
-                        <div class="ct-item">
-                            <div class="ct-icon">
-                                <i class="fa fa-map-marker"></i>
-                            </div>
-                            <div class="ct-text">
-                                <h5>Address</h5>
-                                <p>address for seremban</p>
-                            </div>
-                        </div>
-                        <div class="ct-item">
-                            <div class="ct-icon" style="background-image: linear-gradient(60deg, rgba(217,55,104,1), rgba(42,56,143,1));">
-                                <i class="fa fa-mobile"></i>
-                            </div>
-                            <div class="ct-text">
-                                <h5>Phone</h5>
-                                <ul>
-                                    <li>number 1</li>
-                                    <li>number 2</li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="ct-item">
-                            <div class="ct-icon">
-                                <i class="fa fa-envelope"></i>
-                            </div>
-                            <div class="ct-text">
-                                <h5>Email</h5>
-                                <p>Support @ gmail.com</p>
-                            </div>
+                <div class="col-lg-12 text-center">
+                    <div class="section-title">
+                        <h2>Other Products</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="rp-item">
+                        <img src="img/lawwa-img/product1.jpg" alt="">
+                        <div class="rp-text">
+                            <h5>SPRING GARDEN</h5>
+                            <span>Lifestyle</span>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-6">
-                    <div class="contact-form">
-                        <!-- <h3>Work with Me!</h3> -->
-                        <!-- <br><br><br><br><br> -->
-                        <form action="#">
-                            <input type="text" placeholder="Name">
-                            <input type="text" placeholder="Email">
-                            <input type="text" placeholder="Website">
-                            <textarea placeholder="Message"></textarea>
-                            <button type="submit" class="site-btn" style="background-image: linear-gradient(60deg, rgba(217,55,104,1),  rgba(42,56,143,1));">Submit</button>
-                        </form>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="rp-item">
+                        <img src="img/lawwa-img/product2.jpg" alt="" height="100%">
+                        <div class="rp-text">
+                            <h5>SPRING GARDEN</h5>
+                            <span>Fashion</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="rp-item">
+                        <img src="img/lawwa-img/product1.jpg" alt="">
+                        <div class="rp-text">
+                            <h5>SPRING GARDEN</h5>
+                            <span>Natural</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="rp-item">
+                        <img src="img/lawwa-img/product2.jpg" alt="" height="100%">
+                        <div class="rp-text">
+                            <h5>SPRING GARDEN</h5>
+                            <span>Animal</span>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
+    <!-- Recent Photography Section End -->
 
-    <div class="map">
-        <iframe src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=2.7259,101.9378+(My%20Business%20Name)&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"
-            height="635" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0">
-        </iframe>
-    </div>
-
-
-    <!-- Footer Section Begin -->
-    <footer class="footer-section">
+     <!-- Footer Section Begin -->
+     <footer class="footer-section">
         <div class="container">
           <div class="row">
             <div class="col-lg-3 col-md-6 col-sm-6">
