--- a/lawwa-web-revised/services-old.html
+++ b/lawwa-web-revised/services-old.html
@@ -43,9 +43,9 @@
                         <ul>
                             <li><a href="./index.html">Home</a></li>
                             <li><a href="./about.html">About</a></li>
-                            <li><a href="./services.html">Services</a></li>
+                            <li class="active"><a href="./services.html">Services</a></li>
                             <li><a href="./pricing.html">Pricing</a></li>
-                            <li class="active"><a href="./portfolio.html">Portfolio</a></li>
+                            <li><a href="./portfolio.html">Portfolio</a></li>
                             <li><a href="./blog.html">Blog</a></li>
                             <li><a href="#">Pages</a>
                                 <ul class="dropdown">
@@ -74,8 +74,7 @@
                 <div class="col-lg-12">
                     <div class="bo-links">
                         <a href="./index.html"><i class="fa fa-home"></i> Home</a>
-                        <a href="./portfolio.html">Portfolio</a>
-                        <span>Color of natural</span>
+                        <span>Services</span>
                     </div>
                 </div>
             </div>
@@ -83,147 +82,99 @@
     </div>
     <!-- Breadcrumb End -->
 
-    <!-- Portfolio Hero Section Begin -->
-    <section class="portfolio-hero-section set-bg" data-setbg="img/portfolio/details/details-hero.jpg">
+    <!-- Services Section Begin -->
+    <section class="services-section services-normal spad">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <div class="ph-text">
-                        <h2>Color of natural</h2>
-                        <ul>
-                            <li>Natural</li>
-                            <li>Aniaml</li>
-                            <li>Lifestyle</li>
-                        </ul>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/services/service-1.jpg" alt="">
+                        <h3>Shooting</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/services/service-2.jpg" alt="">
+                        <h3>Videos</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div>
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-6">
+                    <div class="services-item">
+                        <img src="img/services/service-3.jpg" alt="">
+                        <h3>Editing</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Portfolio Hero Section End -->
+    <!-- Services Section End -->
 
-    <!-- Portfolio Details Section Begin -->
-    <section class="portfolio-details-section spad">
+    <!-- Services Option Section Begin -->
+    <section class="services-option">
         <div class="container">
             <div class="row">
                 <div class="col-lg-6">
-                    <div class="pd-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas accumsan lacus vel facilisis.Nemo enim ipsam voluptatem quia voluptas sit
-                            aspernatur aut odit aut fugit. Vivamus at nibh tincidunt, bibendum ligula id. Nemo enim
-                            ipsam voluptatem quiatotam rem.</p>
-                        <p>Enim ipsam voluptatem quiatotam rem aperiam, eaque ipsa quae ab illo inventore aperiam, eaque
-                            ipsa quae ab illo inventore veritatis et quasi architecto. Nemo enim ipsam voluptatem quia
-                            voluptas sit aspernatur aut odit aut fugit.</p>
+                    <div class="so-item">
+                        <div class="so-title">
+                            <div class="so-number">01</div>
+                            <h5>Filming and Editing</h5>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div>
+                    <div class="so-item">
+                        <div class="so-title">
+                            <div class="so-number">02</div>
+                            <h5>Engagement photography</h5>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
+                    </div>
+                    <div class="so-item">
+                        <div class="so-title">
+                            <div class="so-number">03</div>
+                            <h5>Comercial photography</h5>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="pd-text">
-                        <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
-                            laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi
-                            architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit
-                            aspernatur aut odit aut fugit. Vivamus at nibh tincidunt, bibendum ligula id. Nemo veritatis
-                            et quasi architecto beatae vitae dicta sunt explicabo.</p>
-                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit. Vivamus at nibh
-                            tincidunt, bibendum ligula id. Nemo enim ipsam voluptatem quiatotam rem aperiam, eaque ipsa
-                            quae ab illo inventore veritatis et quasi architecto.</p>
+                    <div class="so-item">
+                        <div class="so-title">
+                            <div class="so-number">04</div>
+                            <h5>Social media photography</h5>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                     </div>
-                </div>
-            </div>
-        </div>
-        <div class="portfolio-pics">
-            <div class="portfolio-details-pic">
-                <div class="pdp-item set-bg" data-setbg="img/portfolio/details/details-pic/dp-1.jpg"></div>
-                <div class="pdp-item set-bg large-width large-height"
-                    data-setbg="img/portfolio/details/details-pic/dp-2.jpg"></div>
-                <div class="pdp-item set-bg large-width" data-setbg="img/portfolio/details/details-pic/dp-3.jpg"></div>
-                <div class="pdp-item set-bg" data-setbg="img/portfolio/details/details-pic/dp-4.jpg"></div>
-                <div class="pdp-item set-bg" data-setbg="img/portfolio/details/details-pic/dp-5.jpg"></div>
-                <div class="pdp-item set-bg" data-setbg="img/portfolio/details/details-pic/dp-6.jpg"></div>
-            </div>
-        </div>
-        <div class="pd-more-text">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-12">
-                        <h2>Voluptas sit aspernatur aut odit aut fugit.</h2>
+                    <div class="so-item">
+                        <div class="so-title">
+                            <div class="so-number">02</div>
+                            <h5>Event Photography</h5>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                     </div>
-                    <div class="col-lg-4">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                            labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo
-                            viverra maecenas accumsan lacus vel facilisis. Nemo enim ipsam voluptatem spernatur.</p>
-                    </div>
-                    <div class="col-lg-4">
-                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit. Vivamus at nibh
-                            tincidunt, bibendum ligula id. Nemo enim ipsam voluptatem quiatotam rem aperiam, eaque ipsa
-                            quae ab illo inventore veritatis et quasi architecto beatae vitae fugit.</p>
-                    </div>
-                    <div class="col-lg-4">
-                        <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit. Vivamus at nibh
-                            tincidunt, bibendum ligula id. Nemo enim ipsam voluptatem quiatotam rem aperiam, eaque ipsa
-                            quae ab illo inventore veritatis et quasi architecto beatae vitae dicta.</p>
+                    <div class="so-item">
+                        <div class="so-title">
+                            <div class="so-number">03</div>
+                            <h5>personal photography</h5>
+                        </div>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
+                            magna aliqua. Quis ipsum suspendisse ultrices gravida.</p>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- Portfolio Details Section End -->
-
-    <!-- Recent Photography Section Begin -->
-    <section class="recent-photography-section spad">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <div class="section-title">
-                        <h2>Recent photography</h2>
-                    </div>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="rp-item">
-                        <img src="img/recent-photography/rp-1.jpg" alt="">
-                        <div class="rp-text">
-                            <h5>SPRING GARDEN</h5>
-                            <span>Lifestyle</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="rp-item">
-                        <img src="img/recent-photography/rp-2.jpg" alt="">
-                        <div class="rp-text">
-                            <h5>SPRING GARDEN</h5>
-                            <span>Fashion</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="rp-item">
-                        <img src="img/recent-photography/rp-3.jpg" alt="">
-                        <div class="rp-text">
-                            <h5>SPRING GARDEN</h5>
-                            <span>Natural</span>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
-                    <div class="rp-item">
-                        <img src="img/recent-photography/rp-4.jpg" alt="">
-                        <div class="rp-text">
-                            <h5>SPRING GARDEN</h5>
-                            <span>Animal</span>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="load-more-btn portfolio-btn">
-                <a href="#">View all photography</a>
-            </div>
-        </div>
-    </section>
-    <!-- Recent Photography Section End -->
+    <!-- Services Option Section End -->
 
     <!-- Footer Section Begin -->
     <footer class="footer-section">
